--- a/lineman/app/templates/navbar_user_options.haml
+++ b/lineman/app/templates/navbar_user_options.haml
@@ -11,7 +11,7 @@
       %li.selector-list-item
         %a{href: ''}
           .media-left
-            %user_avatar{user: "currentUser"}
+            %user_avatar{user: "currentUser()"}
           .media-body
             Profile
       %li.selector-list-item
