--- a/lineman/app/templates/navbar.haml
+++ b/lineman/app/templates/navbar.haml
@@ -7,5 +7,5 @@
       %navbar_inbox
       %navbar_search
       %navbar_user_options
-      %navbar_notifications
+      %navbar_notifications{ng-controller: 'NavbarNotificationsController'}
       %navbar_start_discussion
