--- a/lineman/app/css/thread.scss
+++ b/lineman/app/css/thread.scss
@@ -20,6 +20,10 @@
   color: #777777;
   margin-bottom: 10px;
 }
+.thread-origin-group-logo{
+  width: 30px;
+  height: 30px; 
+}
 
 .thread-event {
   margin-bottom: 25px;
@@ -120,7 +124,6 @@
   float: left;
 }
 #comment-form-attachment-button{
-  padding: 9px 10px 10px 8px;
   margin-left: 10px;
 }
 
