--- a/lineman/app/templates/navbar.haml
+++ b/lineman/app/templates/navbar.haml
@@ -1,5 +1,5 @@
 %header#header
-  %nav.loomio-nav{role: 'navigation'}
+  %nav.loomio-nav{role: 'navigation', ng-class: '{inboxPinned: inboxPinned()}'}
     %ul.loomio-nav-items
       %li
         %a.loomio-nav-btn{href: '#'}
