Initial flash stuff

--- a/lineman/app/css/main.scss
+++ b/lineman/app/css/main.scss
@@ -169,6 +169,7 @@ textarea{
 }
 @import 'base';
 @import 'layout';
+@import 'flash';
 @import 'thread';
 @import 'proposal_card';
 @import 'proposal_pie_chart';
