--- a/lineman/app/templates/navbar.haml
+++ b/lineman/app/templates/navbar.haml
@@ -1,5 +1,5 @@
 %header#header
-  %nav.loomio-nav{role: 'navigation'}
+  %nav.loomio-nav.clearfix{role: 'navigation'}
     %ul.loomio-nav-items
       %li
         %a.loomio-nav-btn{href: '#'}
@@ -28,3 +28,4 @@
       %li.pull-right
         %a.loomio-nav-btn{href: '#', ng_click: 'openDiscussionForm()'}
           %i.fa.fa-lg.fa-fw.fa-plus
+  %flash
