--- a/lineman/app/templates/flash.haml
+++ b/lineman/app/templates/flash.haml
@@ -1,9 +1,8 @@
-.flash{ng-if: 'flash.message', class: 'alert-{{flash.level}}'}
-  %ul.flash-messages{ng-if: 'flash.hasManyMessages()'}
-    %li.flash-message{ng-repeat: 'message in flash.message'}
-      {{ message }}
-  .flash-message{ng-if: '!flash.hasManyMessages()'}
-    {{ flash.message }}
+.flash-container{ng-show: 'flash.message', class: 'alert-{{flash.level}}'}
+  %ul.flash-messages{ng-if: 'flash.messageIsArray()'}
+    %li.flash-message{ng-repeat: 'item in flash.message'}
+      {{item | translate}}
+  .flash-message{ng-if: '!flash.messageIsArray()'} {{ flash.message | translate }}
   %button.close.dismiss-flash.pull-right{type: 'button', ng-click: 'dismiss()'}
     %span{aria-hidden: true} &times;
     %span.sr-only{translate: 'common.action.dismiss'}
