Modal flash works

--- a/lineman/app/templates/navbar.haml
+++ b/lineman/app/templates/navbar.haml
@@ -9,4 +9,4 @@
       %navbar_user_options
       %navbar_notifications{ng-controller: 'NavbarNotificationsController'}
       %navbar_start_discussion
-  %flash{modal:false}
+  %flash{modal: 'false'}
