--- a/lineman/app/templates/proposal_form.haml
+++ b/lineman/app/templates/proposal_form.haml
@@ -6,7 +6,7 @@
     %h1{translate: 'proposal_form.start_a_proposal'}
 
   .modal-body
-    %flash{modal: true}
+    %flash{modal: 'true'}
     %p{translate: 'proposal_form.what_does_a_proposal_do'}
 
     %fieldset{ng-disabled: 'isDisabled'}
