--- a/lineman/app/css/flash.scss
+++ b/lineman/app/css/flash.scss
@@ -2,24 +2,23 @@
   padding: 5px 0;
   text-align: center;
   position: relative;
+  top: 0px;
+  -webkit-transition: 400ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+  -moz-transition: 400ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+  -ms-transition: 400ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+  -o-transition: 400ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+  transition: 400ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
 }
+
+.flash-container.ng-hide { opacity: 0; }
+
+.flash-container.ng-hide-remove {
+  opacity: 0;
+  top: -30px;
+}
+
 .dismiss-flash {
   position: absolute;
   right: 5px;
   top: 5px;
-}
-
-.flash-container.ng-enter {
-  -webkit-transition:0.5s linear all;
-  -moz-transition:0.5s linear all;
-  -o-transition:0.5s linear all;
-  transition:0.5s linear all;
-  opacity:0;
-  border: 1px solid red;
-}
-
-.flash
-
-.flash.ng-enter.ng-show-active {
-  opacity:1;
 }
