--- a/lineman/app/templates/flash.haml
+++ b/lineman/app/templates/flash.haml
@@ -3,7 +3,7 @@
     %ul.flash-messages{ng-if: 'flash.messageIsArray()'}
       %li.flash-message{ng-repeat: 'item in flash.message'}
         {{item | translate}}
-    .flash-message{ng-if: '!flash.messageIsArray()'} Flash: {{ flash.message | translate }}
+    .flash-message{ng-if: '!flash.messageIsArray()'} {{ flash.message | translate }}
     %button.close.dismiss-flash.pull-right{type: 'button', ng-click: 'dismiss()'}
       %span{aria-hidden: true} &times;
       %span.sr-only{translate: 'common.action.dismiss'}
