--- a/lineman/app/templates/proposal_form.haml
+++ b/lineman/app/templates/proposal_form.haml
@@ -12,7 +12,7 @@
     %fieldset{ng-disabled: 'isDisabled'}
       .form-group
         %label{for: 'proposal-title-field', translate: 'proposal_form.title_label'}
-        %input#proposal-title-field.form-control{placeholder: "{{ 'proposal_form.title_placeholder' | translate }}", ng-model: 'proposal.name', ng-required: 'true'}
+        %input#proposal-title-field.form-control{placeholder: "{{ 'proposal_form.title_placeholder' | translate }}", ng-model: 'proposal.name', ng-required: 'false'}
 
       .form-group
         %label{for: 'proposal-details-field', translate: 'proposal_form.details_label'}
