--- a/lineman/app/templates/navbar_search.haml
+++ b/lineman/app/templates/navbar_search.haml
@@ -8,7 +8,7 @@
       %li.selector-list-header
         %h3{translate: "common.groups"}
       %li.selector-list-item.media{ng_repeat: 'group in availableGroups() | filter:query', class: 'is-subgroup-{{group.parentId != null}}'}
-        %a.selector-list-item-link{href: '/groups/{{group.key}}'}
+        %a.selector-list-item-link{href: '/g/{{group.key}}'}
           .media-left
             %img.selector-list-item-group-logo{src: "{{group.logoUrlSmall}}"}
           .selector-list-item-group-name.media-body {{group.fullName()}}
