--- a/lineman/app/templates/subgroups.haml
+++ b/lineman/app/templates/subgroups.haml
@@ -6,12 +6,12 @@
         .subgroup-list-item-logo
       .media-body
         .subgroup-list-item-name
-          %a{href: '/groups/{{subgroup.key}}'} {{ subgroup.name }}
+          %a{href: '/g/{{subgroup.key}}'} {{ subgroup.name }}
         / this should be truncated down to a few dozen chars
         / do we want to use this? https://github.com/sparkalow/angular-truncate
         .subgroup-list-item-description {{ subgroup.description }}
 
     .card-minor-action{ng-if: '::canCreateSubgroups()'}
-      %a{href: '/groups/new?parent_id={{group.key}}'}
+      %a{href: '/g/new?parent_id={{group.key}}'}
         %span>+
         %span{ translate: 'common.action.add_subgroup' }
