--- a/lineman/app/templates/discussions.haml
+++ b/lineman/app/templates/discussions.haml
@@ -8,9 +8,9 @@
           %i.fa.fa-lg.fa-comments
 
       .group-thread-list-thread-title
-        %a{href: '/discussions/{{discussion.key}}'} {{ discussion.title }}
+        %a{href: '/d/{{discussion.key}}'} {{ discussion.title }}
       .group-thread-list-group-name
-        %a{href: '/groups/{{discussion.group().key}}'} {{ discussion.groupName() }}
+        %a{href: '/g/{{discussion.group().key}}'} {{ discussion.groupName() }}
 
     .discussions-show-more.card-minor-action
       %a{ng-hide: 'lastPage', ng-click: 'getNextPage()', href: '#', translate: 'common.action.show_more'}
