--- a/lineman/app/templates/members.haml
+++ b/lineman/app/templates/members.haml
@@ -8,7 +8,7 @@
     .group-member-list-item{ng-repeat: 'member in group.members()'}
       .group-member-list-avatar.lg{ng-include: "'generated/templates/user/avatar.html'", ng-init: 'user = member'}
     .group-member-list-show-more.show-more.card-minor-action
-      %a{href: '/groups/{{group.key}}/memberships', translate: 'common.action.show_more'}
+      %a{href: '/g/{{group.key}}/memberships', translate: 'common.action.show_more'}
     .members-invite{ng_controller: 'InvitationsController', ng-if: '::canAddMembers()'}
       .row
         .col-xs-12.col-sm-6
