--- a/lineman/app/templates/memberships_page.haml
+++ b/lineman/app/templates/memberships_page.haml
@@ -1,6 +1,6 @@
 .form-card
   %h1
-    %a{href:'/groups/{{group.key}}'} {{group.name}}
+    %a{href:'/groups/{{g.key}}'} {{group.name}}
   %h2{translate: 'memberships_page.members'}
 
   %table.members-page-table
