Point loomio icon to home page

--- a/lineman/app/templates/navbar.haml
+++ b/lineman/app/templates/navbar.haml
@@ -2,7 +2,7 @@
   %nav.loomio-nav.clearfix{role: 'navigation', ng-class: '{inboxPinned: inboxPinned()}'}
     %ul.loomio-nav-items
       %li
-        %a.loomio-nav-btn{href: '#'}
+        %a.loomio-nav-btn{href: '/'}
           .loomio-nav-logo
       %navbar_inbox
       %navbar_search
