--- a/lineman/app/templates/group.haml
+++ b/lineman/app/templates/group.haml
@@ -3,8 +3,8 @@
     .col-xs-12
       .group-page-container
         .group-page-header
-          .group-page-cover
-          .group-page-logo.hidden-xs
+          .group-page-cover{style:'background:url({{group.coverUrlSmall}})'}
+          .group-page-logo.hidden-xs{style:'background:url({{group.logoUrlSmall}})'}
           .group-page-buttons.pull-right
             %group_notifications_dropdown{group: 'group'}
             %group_options_dropdown{group: 'group'}
