--- a/lineman/app/templates/discussion.haml
+++ b/lineman/app/templates/discussion.haml
@@ -17,12 +17,12 @@
               %a{href: '/groups/{{discussion.group().key}}'} {{::discussion.group().fullName()}}
               %br
               %span{translate: 'discussion.started_by', translate-value-name: '{{::discussion.authorName()}}'}
-              %timeago{timestamp: '::discussion.createdAt' }>
+              %timeago.nowrap{timestamp: '::discussion.createdAt' }>
               ·
-              %span.discussion-privacy__is-private{ng-show: 'discussion.private'}>
+              %span.nowrap.discussion-privacy__is-private{ng-show: 'discussion.private'}>
                 %i.fa.fa-lock>
                 %span{translate: 'common.privacy.private'}
-              %span.discussion-privacy__is-public{ng-show: '!discussion.private'}>
+              %span.nowrap.discussion-privacy__is-public{ng-show: '!discussion.private'}>
                 %i.fa.fa-globe>
                 %span{translate: 'common.privacy.public'}
 
