--- a/app/views/layouts/angular.html.haml
+++ b/app/views/layouts/angular.html.haml
@@ -13,15 +13,10 @@
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-  %body.sidebar-is-open
+  %body
     %navbar
-
-    / only load this if the sidebar is open
-    / %sidebar#sidebar.hidden-xs
-    /   %inbox
-    .sidebar-spacer
-      .container#main
-        %main{ng_view: ''}
+    %sidebar
+    %main{ng_view: ''}
 
     = javascript_include_tag lineman_js_path
     %script{src: "#{ENV['FAYE_URL']}/client.js", type: 'text/javascript'}
