--- a/lineman/app/templates/navbar_user_options.haml
+++ b/lineman/app/templates/navbar_user_options.haml
@@ -21,13 +21,13 @@
           .media-body
             Email settings
       %li.selector-list-item
-        %a{href: ''}
+        %a{href: '/help'}
           .media-left
             %i.fa.fa-xlg.fa-info
           .media-body
             Help
       %li.selector-list-item
-        %a{href: ''}
+        %a{href: '/contact'}
           .media-left
             %i.fa.fa-xlg.fa-question-circle
           .media-body
