Fix leave & deactivate group + add flashes

--- a/lineman/app/templates/leave_group.haml
+++ b/lineman/app/templates/leave_group.haml
@@ -6,6 +6,7 @@
     %h1{translate: 'group_page.leave_group.title'}
 
   .modal-body
+    %flash{modal: 'true'}
     %span{translate: 'group_page.leave_group.question'}
   .modal-footer
     %button.btn.btn-primary{type: 'submit', translate: 'group_page.leave_group.submit'}
