--- a/lineman/app/templates/members.haml
+++ b/lineman/app/templates/members.haml
@@ -1,6 +1,10 @@
 .group-page-members
-  .context-menu.pull-right{ng-if: 'canAddMembers()'}
-    %i.fa.fa-lg.fa-chevron-down
+  .dropdown.context-menu.pull-right{ng-if: 'isAdminOf(group)'}
+    %a.dropdown-toggle{href: ''}
+      %i.fa.fa-lg.fa-chevron-down
+    %ul.dropdown-menu
+      %li
+        %a{href: '/g/{{group.key}}/memberships', translate: 'group_page.options.manage_members'}
 
   %h3.first{ translate: 'group_page.members' }
 
