Fix edit/delete comment, resolve problems with angular.copy

--- a/lineman/app/templates/edit_comment.haml
+++ b/lineman/app/templates/edit_comment.haml
@@ -4,4 +4,4 @@
     %span.sr-only{translate: 'common.action.cancel'}
   %h3.modal-title{translate: 'comment_form.edit_comment'}
 .modal-body
-  %comment_form{comment: 'comment'}
+  %comment_form{discussion: 'comment.discussion()', comment: 'comment'}
