Make edit proposal dropdown dingus appear in right place

--- a/lineman/app/css/proposal_card.scss
+++ b/lineman/app/css/proposal_card.scss
@@ -32,6 +32,9 @@
   @include metaText;
   text-decoration: underline;
 }
+.proposal-card-edit {
+  position: relative;
+}
 .pie-chart-pie {
   width: 120px;
   height: 120px;
