Remove unused menu dropdowns

--- a/lineman/app/css/main.scss
+++ b/lineman/app/css/main.scss
@@ -176,6 +176,7 @@ input[type="file"]{
 @import 'layout';
 @import 'flash';
 @import 'thread';
+@import 'profile';
 @import 'proposal_card';
 @import 'proposal_pie_chart';
 @import 'vote_form';
