--- a/lineman/app/templates/navbar_user_options.haml
+++ b/lineman/app/templates/navbar_user_options.haml
@@ -9,17 +9,11 @@
             %i.fa.fa-xlg.fa-plus
           .media-body New thread
       %li.selector-list-item
-        %a{href: ''}
+        %a{href: '/profile'}
           .media-left
             %user_avatar{user: "currentUser()"}
           .media-body
             Profile
-      %li.selector-list-item
-        %a{href: ''}
-          .media-left
-            %i.fa.fa-xlg.fa-envelope-o
-          .media-body
-            Email settings
       %li.selector-list-item
         %a{href: '/help'}
           .media-left
@@ -32,9 +26,3 @@
             %i.fa.fa-xlg.fa-question-circle
           .media-body
             Contact us
-      %li.selector-list-item
-        %a{href: ''}
-          .media-left
-            %i.fa.fa-xlg.fa-sign-out
-          .media-body
-            Sign out
