--- a/lineman/app/templates/inbox.haml
+++ b/lineman/app/templates/inbox.haml
@@ -1,7 +1,7 @@
 %ul.selector-list
   %li.selector-list-header{ng-click: 'logDiscussions()'}
     %h3{translate: 'inbox.latest_threads'}
-  %li.selector-list-item{ng-repeat: 'discussion in discussions'}
+  %li.selector-list-item{ng-repeat: 'discussion in discussions | orderBy:["activeProposalClosedAt", "-lastActivityAt"]'}
     %a.selector-list-item-link{href: '/d/{{ discussion.key}}'}
       .brief-time.pull-right
         .time-ago{timestamp: 'discussion.lastActivityAt'}
@@ -13,9 +13,11 @@
         .selector-list-item-proposal-details.media-body
           {{ proposal.name }}
           .time-left
-            3 hours left
+            %span{translate: 'inbox.closing_in'}>
+            %timeago{timestamp: 'proposal.closingAt'}>
       .selector-list-item-thread-group-name
         {{::discussion.group().fullName()}}
+      %timeago{timestamp: 'discussion.lastActivityAt'}>
 
   %li.selector-list-item.hidden-xs{ng-hide: 'inboxPinned()', ng-click: 'openInbox()'}
     %a{href: '#'}
