tidy up new thread form

--- a/lineman/app/css/main.scss
+++ b/lineman/app/css/main.scss
@@ -151,6 +151,10 @@ h3.dropdown-heading{
   font-weight: normal;
 }
 
+label.label-with-details{
+  margin-left: 5px;
+}
+
 .fa-volume-off-padded{margin: 0 6px 0 3px;}
 
 .form-card{
