--- a/lineman/app/templates/group.haml
+++ b/lineman/app/templates/group.haml
@@ -6,8 +6,13 @@
           .group-page-cover{style:'background-image:url({{group.coverUrl()}})'}
           .group-page-logo.hidden-xs{style:'background-image:url({{group.logoUrl()}})'}
           .group-page-buttons.pull-right
-            %group_notifications_dropdown{group: 'group'}
-            %group_options_dropdown{group: 'group'}
+            .group-member-options{ng-if: 'isMember()'}
+              %group_notifications_dropdown{group: 'group'}
+              %group_options_dropdown{group: 'group'}
+            .group-nonmember-options{ng-if: '!isMember()'}
+              %a.btn.btn-success.btn-block.btn-icon{href: '#', ng-click: 'joinGroup()'}
+                %i.fa.fa-lg.fa-plus>
+                %span{translate: 'group_page.join_group' }
           .group-page-name-and-privacy
             .group-page-name
               %h1
