Thread event images max 100%

--- a/lineman/app/css/thread.scss
+++ b/lineman/app/css/thread.scss
@@ -45,6 +45,10 @@
   margin-bottom: 10px;
 }
 
+.thread-event-body img {
+  max-width: 100%;
+}
+
 .thread-event-footer {
   @include fontSmall();
   color: $meta-text-color;
