--- a/app/views/layouts/angular.html.haml
+++ b/app/views/layouts/angular.html.haml
@@ -9,7 +9,7 @@
     = stylesheet_link_tag lineman_css_path
     :javascript
       window.Loomio = {};
-      window.Loomio.defaultRoute = "#{ENV['ANGULAR_HOMEPAGE']}";
+      window.Loomio.defaultRoute = "#{ENV['ANGULAR_HOMEPAGE'] || '/g/WmPCB3IR' }";
 
     %base{href: '/'}
     <!--[if lt IE 9]>
