looking mostly functional

--- a/app/views/layouts/angular.html.haml
+++ b/app/views/layouts/angular.html.haml
@@ -19,4 +19,7 @@
     %main{ng_view: ''}
 
     = javascript_include_tag lineman_js_path
+    :javascript
+      window.currentUserData = #{UserSerializer.new(current_user).to_json}
+
     %script{src: "#{ENV['FAYE_URL']}/client.js", type: 'text/javascript'}
