--- a/lineman/app/templates/discussion_form.haml
+++ b/lineman/app/templates/discussion_form.haml
@@ -14,7 +14,7 @@
     .form-group
       %label{for: 'discussion-group-field', translate: 'discussion_form.group_label'}
       %select.form-control{ng-model: 'discussion.groupId', ng-required: 'true' ng-options: 'group.id as group.fullName() for group in availableGroups()', ng-change: 'setCurrentPrivacy()'}
-        %option{value: '', translate: 'discussion_form.group_placeholder' }}
+        %option{value: '', translate: 'discussion_form.group_placeholder' }
 
     .discussion-group-selected{ng_show: 'discussion.groupId'}
       .form-group
