add membership request model and part fix membership request notifications from logged out users

--- a/app/views/layouts/angular.html.haml
+++ b/app/views/layouts/angular.html.haml
@@ -23,6 +23,7 @@
 
     = javascript_include_tag lineman_js_path
     :javascript
-      window.currentUserData = #{UserSerializer.new(current_user).to_json}
+      window.Loomio.currentUserId = #{current_user.id};
+      window.Loomio.seedRecords = #{CurrentUserSerializer.new(current_user).to_json}
 
     %script{src: "#{ENV['FAYE_URL']}/client.js", type: 'text/javascript'}
