--- a/lineman/app/templates/navbar_notifications.haml
+++ b/lineman/app/templates/navbar_notifications.haml
@@ -5,5 +5,5 @@
     .navbar-notifications
       %ul.selector-list
         %li.selector-list-header
-          %h3{translate: "notifications.header", ng-click: 'hello()'}
-        %li.selector-list-item.media{ng_repeat: 'notification in notifications()', ng_include: "'generated/templates/notification_items/'+ notification.event().kind + '.html'" }
+          %h3{translate: "notifications.header"}
+        %li.selector-list-item.media{ng_repeat: 'notification in currentUser.notifications()', ng_include: "'generated/templates/notification_items/'+ notification.event().kind + '.html'" }
