--- a/lineman/app/templates/notification_items/membership_requested.haml
+++ b/lineman/app/templates/notification_items/membership_requested.haml
@@ -1,8 +1,11 @@
-%a.selector-list-item-link{ng-href: '{{notification.event().link()}}'}
+%a.selector-list-item-link{ng-href: '{{::notification.event().link()}}'}
   .media-left
-    %user_avatar{user: "notification.event().actor()"}
+    %user_avatar{user: "::notification.event().actor()", ng-if: 'notification.event().membershipRequest().byExistingUser()'}
+    %div{ng-if: '!notification.event().membershipRequest().byExistingUser()'}
+      fake
+    %user_avatar{user: "::notification.event().membershipRequest().fakeUser()", ng-if: '!notification.event().membershipRequest().byExistingUser()'}
   .media-body
-    %span> {{ notification.event().actor().name }}
+    %span> {{ ::notification.event().actor().name }}
     %span{translate:  "notifications.membership_requested" }>
-    %span> {{ notification.event().group().title }}
+    %span> {{ ::notification.event().group().title }}
 
