--- a/lineman/app/templates/notification_items/membership_requested.haml
+++ b/lineman/app/templates/notification_items/membership_requested.haml
@@ -1,11 +1,13 @@
 %a.selector-list-item-link{ng-href: '{{::notification.event().link()}}'}
+  -#requestor: {{ notification.event().membershipRequest().requestor() }}
+    -#user by that id?: {{ notification.event().membershipRequest().requestorId }}
+  -#.a{ng-if: "!notification.event().membershipRequest().requestorId"}
+    -#anon request: {{notification.event().membershipRequest().name}}
+  -#{{ ::notification.event().membershipRequest().actor() }}
   .media-left
-    %user_avatar{user: "::notification.event().actor()", ng-if: 'notification.event().membershipRequest().byExistingUser()'}
-    %div{ng-if: '!notification.event().membershipRequest().byExistingUser()'}
-      fake
-    %user_avatar{user: "::notification.event().membershipRequest().fakeUser()", ng-if: '!notification.event().membershipRequest().byExistingUser()'}
+    %user_avatar{user: "::notification.event().membershipRequest().actor()", ng-if: "notification.event().membershipRequest().byExistingUser()"}
   .media-body
-    %span> {{ ::notification.event().actor().name }}
+    %span> {{ ::notification.event().membershipRequest().actor().name }}
     %span{translate:  "notifications.membership_requested" }>
-    %span> {{ ::notification.event().group().title }}
+    %span> {{ ::notification.event().membershipRequest().group().fullName() }}
 
