--- a/lineman/app/templates/user_avatar.haml
+++ b/lineman/app/templates/user_avatar.haml
@@ -1,5 +1,5 @@
 .user-avatar
-  .avatar-initials{ng-if: 'user.avatarKind == "initials"'}
-    {{user.avatarInitials}}
-  .avatar-image{ng-if: 'user.avatarKind != "initials"'}
-    %img{alt: "...", src: '{{user.avatarUrl}}'}
+  .avatar-initials{ng-if: '::(user.avatarKind == "initials")'}
+    {{::user.avatarInitials}}
+  .avatar-image{ng-if: '::(user.avatarKind != "initials")'}
+    %img{alt: "{{::user.name}}", src: '{{::user.avatarUrl}}'}
