--- a/lineman/app/js/modules/group_page/group_page.haml
+++ b/lineman/app/js/modules/group_page/group_page.haml
@@ -25,6 +25,6 @@
         .group-page-description
           %h3.first{ translate: 'group_page.description' }
           .group-description.last{ btf-markdown: 'group.description' }
-        %discussions{group: 'group'}
-        %members{group: 'group'}
-        %subgroups{group: 'group'}
+        %discussions_card{group: 'group'}
+        %members_card{group: 'group'}
+        %subgroups_card{group: 'group'}
