proposals card still not quite comming up

--- a/lineman/app/js/modules/discussion_page/proposals_card/proposal_card_collapsed.haml
+++ b/lineman/app/js/modules/discussion_page/proposals_card/proposal_card_collapsed.haml
@@ -11,5 +11,5 @@
       /   .media-left.thread-event-vote-icon{class: 'thread-event-vote-icon-{{currentUserVote().position}}'}
       /   .proposal-card-vote-statement {{ currentUserVote().statement }}
       .proposal-card-collapsed-outcome{ng_show: 'proposal.outcome'}
-        Outcome: {{::proposal.outcome}}
+        Outcome: {{proposal.outcome}}
     .clearfix
