gonna try moving css now

--- a/app/views/layouts/angular.html.haml
+++ b/app/views/layouts/angular.html.haml
@@ -21,7 +21,8 @@
     %sidebar
     %main{ng_view: ''}
 
-    = javascript_include_tag lineman_js_path
+    = javascript_include_tag lineman_vendorjs_path
+    = javascript_include_tag lineman_appjs_path
     :javascript
       window.Loomio.currentUserId = #{current_user.id};
       window.Loomio.seedRecords = #{CurrentUserSerializer.new(current_user).to_json}
