and finally the insanity is coming to a close

--- a/lineman/app/css/main.scss
+++ b/lineman/app/css/main.scss
@@ -53,6 +53,7 @@ $sidebar-width: 320px;
   font-weight:600;
   font-stretch:normal;
 }
+
 @mixin fontHelveticaMedium{
   font-family: "HelveticaNeueMedium", "HelveticaNeue-Medium", "Helvetica Neue Medium", "HelveticaNeue", "Helvetica Neue", 'TeXGyreHerosRegular', "Helvetica", "Tahoma", "Geneva", "Arial", sans-serif;
   font-weight:500;
@@ -179,11 +180,14 @@ input[type="file"]{
 
 @import 'base';
 @import 'layout';
-@import '../modules/flash/flash';
-@import '../modules/discussion_page/thread';
-@import '../modules/profile_page/profile_page';
-@import '../modules/discussion_page/proposals_card/proposals_card';
-@import '../modules/discussion_page/proposals_card/proposal_pie_chart';
-@import '../modules/discussion_page/proposals_card/vote_form/vote_form';
-@import '../modules/timeago/timeago';
-@import '../modules/group_page/group_page';
+
+@import '../modules/timeago/timeago.scss';
+@import '../modules/profile_page/profile_page.scss';
+@import '../modules/group_page/group_page.scss';
+@import '../modules/flash/flash.scss';
+@import '../modules/discussion_page/thread.scss';
+@import '../modules/discussion_page/proposals_card/vote_form/vote_form.scss';
+@import '../modules/discussion_page/proposals_card/proposals_card.scss';
+@import '../modules/discussion_page/proposals_card/proposal_pie_chart/proposal_pie_chart.scss';
+@import '../modules/discussion_page/proposals_card/proposal_expanded/proposal_expanded.scss';
+@import '../modules/discussion_page/proposals_card/proposal_collapsed/proposal_collapsed.scss';
