--- a/lineman/app/modules/discussion_page/proposals_card/close_proposal_form/close_proposal_form.haml
+++ b/lineman/app/modules/discussion_page/proposals_card/close_proposal_form/close_proposal_form.haml
@@ -3,11 +3,11 @@
     %button{type: 'button', class: 'close', ng-click: 'cancel()'}
       %span{aria-hidden: true} &times;
       %span.sr-only{translate: 'common.action.cancel'}
-    %h1{translate: 'proposal_close_form.close_proposal', translate-value-proposal-name: '{{::proposal.name}}'}
+    %h1{translate: 'close_proposal_form.close_proposal', translate-value-proposal-name: '{{::proposal.name}}'}
 
   .modal-body
-    %span{translate: 'proposal_close_form.helptext'}
+    %span{translate: 'close_proposal_form.helptext'}
 
   .modal-footer
-    %button.btn.btn-primary{type: 'submit', translate: 'proposal_close_form.close_proposal_submit'}
+    %button.btn.btn-primary{type: 'submit', translate: 'close_proposal_form.close_proposal_submit'}
     %button.btn.btn-warning{ng-click: 'cancel($event)', translate: 'common.action.cancel'}
