--- a/lineman/app/modules/discussion_page/proposals_card/proposal_collapsed/proposal_collapsed.haml
+++ b/lineman/app/modules/discussion_page/proposals_card/proposal_collapsed/proposal_collapsed.haml
@@ -1,11 +1,11 @@
-.proposal-card-collapsed{ng-show: 'proposal'}
+.proposal-card-collapsed
   %a.media{href: "#"}
     %timeago.pull-right{timestamp: 'proposal.createdAt'}
     .proposal-card-collapsed-expand.pull-right Expand
     %mini-proposal-pie-chart.media-left{proposal: 'proposal'}
     .proposal-card-collapsed-body.media-body
       .proposal-card-collapsed-title
-        %h2.first.proposal-card-name {{::proposal.name}}
+        %h2.first.proposal-card-name {{proposal.name}}
         / %span.proposal-closed{ng_show: 'proposal.closedAt'}
       / .proposal-card-vote{ng_show: 'currentUserHasVoted()'}
       /   .media-left.thread-event-vote-icon{class: 'thread-event-vote-icon-{{currentUserVote().position}}'}
